asignación de clases

--- a/index.html
+++ b/index.html
@@ -14,53 +14,53 @@
 </head>
 <body>
     <header class="header">
-        <nav class="header_navbar bg-white">
-            <img src="assets/img/logo_header.png" alt="Logo Tía Tomate">
+        <nav class="header_navbar">
+            <img src="assets/img/logo_header2.png" alt="Logo Tía Tomate">
         </nav>
-        <section class="header_titulo bg-red text-white">
-            <h1><span class="h1">De nuestro cariño </span><span class="h1 upper">a tu mesa</span></h1>
+        <section class="header_titulo txt-white txt-center">
+            <h1><span class="display txt-xl txt-light">De nuestro cariño </span><span class="display txt-xl txt-bold upper">a tu mesa</span></h1>
         </section>
     </header>
 
     <main class="main">
-        <section class="bg-dark text-white">
-            <article>
+        <section class="bg-dark txt-white">
+            <article class="contenedor">
                 <img src="assets/img/about-1.png" alt="Tomates 100% orgánicos">
-                <h3>Tomates 100% orgánicos</h2>
+                <h3 class="txt-lg">Tomates 100% orgánicos</h2>
                 <p>En tía tomate estamos comprometidos con tu salud y la de tu familia, de modo que probarás tomates ricos y sin sabor artificial.</p>
                 <p>Para darle vida a nuestros productos usamos materias primas orgánicas y que estén en completo equilibrio con la naturaleza. Así que al comprar cualquier tipo de tomate con nosotros te asegurarás de que comerás la mejor calidad de tomates limachinos.</p>
             </article>
         </section>
-        <section class="bg-snow">
-            <article>
+        <section class="bg-snow txt-dark">
+            <article class="contenedor">
                 <img src="assets/img/about-2.png" alt="Desde Limache con amor">
-                <h3>Desde Limache con amor</h3>
+                <h3 class="txt-lg">Desde Limache con amor</h3>
                 <p>Los tomates que etás a punto de coprar son nacidos y criados en una de las mejores zonas para la producción de tomates de Chile. El proceso que conlleva criar estos tomates toma alrededor de tres meses de muechos cariños y cuidados.</p>
                 <p>Los tomates toman todos los nutrientes de esta hermosa tierra para que luego tú los disfrutes en cualquier ocasión</p>
             </article>
         </section>
 
         <section class="bg-jelly-bean">
-            <h2 class="h1 upper">Nosotros</h2>
+            <h2 class="txt-xl upper">Nosotros</h2>
         </section>
         <section class="bg-snow">
             <article>
                 <img src="assets/img/about-3.png" alt="Foto de Javiera Kunstmann">
-                <h3>Javiera Kunstmann</h3>
+                <h3 class="txt-lg">Javiera Kunstmann</h3>
                 <p>Javiera es la orgullosa dueña de Tía Tomate. Nacida y criada en Limache se siente tan a gusto aquí como los tomates que cosecha.</p>
                 <p>Ella es la encargada administrativa de Tía Tomate y estará muy a gusto que la contactes para probar la mejor calidad de tomates de todo Limache.</p>
                 <p>Javiera y su marido llevan más de 15 años en el rubro ofreciendo la mejor calidad en tomates y desde el 2015 comenzaron con la producción de tomates orgánicos limachinos.</p>
             </article>
             <article>
                 <img src="assets/img/about-4.png" alt="Foto de Roberto Pacheco">
-                <h3>Roberto Pacheco</h3>
-                <p>Roberto es el marido de Javiera. Él es el encargado de darle vida a los tomates, usando su vasta experiencia en la agricultura ha sabido seleccionar las mejores cepas de toates para su cría y cosecha.</p>
+                <h3 class="txt-lg">Roberto Pacheco</h3>
+                <p>Roberto es el marido de Javiera. Él es el encargado de darle vida a los tomates, usando su vasta experiencia en la agricultura ha sabido seleccionar las mejores cepas de tomates para su cría y cosecha.</p>
             </article>
         </section>
 
         <section>
-            <h2 class="h1">¿Tomates para tu negocio?</h2>
-            <a class="btn btn-xl upper">Click aquí</a>
+            <h2 class="txt-xl">¿Tomates para tu negocio?</h2>
+            <a class="btn btn-xl upper txt-lg">Click aquí</a>
         </section>
     </main>
 
