--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="header_navbar">
             <img src="assets/img/logo_header2.png" alt="Logo Tía Tomate">
         </nav>
-        <section class="header_titulo txt-white txt-center">
+        <section class="header_titulo txt-white txt-center bg-jelly-bean">
             <h1><span class="display txt-xl txt-light">De nuestro cariño </span><span class="display txt-xl txt-bold upper">a tu mesa</span></h1>
         </section>
     </header>
@@ -26,45 +26,53 @@
         <section class="bg-dark txt-white">
             <article class="contenedor">
                 <img src="assets/img/about-1.png" alt="Tomates 100% orgánicos">
-                <h3 class="txt-lg">Tomates 100% orgánicos</h2>
-                <p>En tía tomate estamos comprometidos con tu salud y la de tu familia, de modo que probarás tomates ricos y sin sabor artificial.</p>
-                <p>Para darle vida a nuestros productos usamos materias primas orgánicas y que estén en completo equilibrio con la naturaleza. Así que al comprar cualquier tipo de tomate con nosotros te asegurarás de que comerás la mejor calidad de tomates limachinos.</p>
+                <h3 class="txt-lg">Tomates 100% orgánicos</h3>
+                <div class="txt-left">
+                    <p>En tía tomate estamos comprometidos con tu salud y la de tu familia, de modo que probarás tomates ricos y sin sabor artificial.</p>
+                    <p>Para darle vida a nuestros productos usamos materias primas orgánicas y que estén en completo equilibrio con la naturaleza. Así que al comprar cualquier tipo de tomate con nosotros te asegurarás de que comerás la mejor calidad de tomates limachinos.</p>
+                </div>                
             </article>
         </section>
         <section class="bg-snow txt-dark">
             <article class="contenedor">
                 <img src="assets/img/about-2.png" alt="Desde Limache con amor">
                 <h3 class="txt-lg">Desde Limache con amor</h3>
-                <p>Los tomates que etás a punto de coprar son nacidos y criados en una de las mejores zonas para la producción de tomates de Chile. El proceso que conlleva criar estos tomates toma alrededor de tres meses de muechos cariños y cuidados.</p>
-                <p>Los tomates toman todos los nutrientes de esta hermosa tierra para que luego tú los disfrutes en cualquier ocasión</p>
+                <div class="txt-left">
+                    <p>Los tomates que etás a punto de coprar son nacidos y criados en una de las mejores zonas para la producción de tomates de Chile. El proceso que conlleva criar estos tomates toma alrededor de tres meses de muechos cariños y cuidados.</p>
+                    <p>Los tomates toman todos los nutrientes de esta hermosa tierra para que luego tú los disfrutes en cualquier ocasión</p>
+                </div>
             </article>
         </section>
 
-        <section class="bg-jelly-bean">
-            <h2 class="txt-xl upper">Nosotros</h2>
+        <section class="bg-jelly-bean espacio">
+            <h2 class="txt-xl upper txt-white espacio">Nosotros</h2>
         </section>
-        <section class="bg-snow">
+        <section class="contenedor about bg-snow">
             <article>
                 <img src="assets/img/about-3.png" alt="Foto de Javiera Kunstmann">
                 <h3 class="txt-lg">Javiera Kunstmann</h3>
-                <p>Javiera es la orgullosa dueña de Tía Tomate. Nacida y criada en Limache se siente tan a gusto aquí como los tomates que cosecha.</p>
-                <p>Ella es la encargada administrativa de Tía Tomate y estará muy a gusto que la contactes para probar la mejor calidad de tomates de todo Limache.</p>
-                <p>Javiera y su marido llevan más de 15 años en el rubro ofreciendo la mejor calidad en tomates y desde el 2015 comenzaron con la producción de tomates orgánicos limachinos.</p>
+                <div class="txt-left">
+                    <p>Javiera es la orgullosa dueña de Tía Tomate. Nacida y criada en Limache se siente tan a gusto aquí como los tomates que cosecha.</p>
+                    <p>Ella es la encargada administrativa de Tía Tomate y estará muy a gusto que la contactes para probar la mejor calidad de tomates de todo Limache.</p>
+                    <p>Javiera y su marido llevan más de 15 años en el rubro ofreciendo la mejor calidad en tomates y desde el 2015 comenzaron con la producción de tomates orgánicos limachinos.</p>
+                </div>
             </article>
             <article>
                 <img src="assets/img/about-4.png" alt="Foto de Roberto Pacheco">
                 <h3 class="txt-lg">Roberto Pacheco</h3>
-                <p>Roberto es el marido de Javiera. Él es el encargado de darle vida a los tomates, usando su vasta experiencia en la agricultura ha sabido seleccionar las mejores cepas de tomates para su cría y cosecha.</p>
+                <div class="txt-left">
+                    <p>Roberto es el marido de Javiera. Él es el encargado de darle vida a los tomates, usando su vasta experiencia en la agricultura ha sabido seleccionar las mejores cepas de tomates para su cría y cosecha.</p>
+                </div>                
             </article>
         </section>
 
-        <section>
+        <section class="call-to-action bg-jelly-bean txt-white espacio">
             <h2 class="txt-xl">¿Tomates para tu negocio?</h2>
-            <a class="btn btn-xl upper txt-lg">Click aquí</a>
+            <a class="btn upper txt-lg txt-dark txt-bold">Click aquí</a>
         </section>
     </main>
 
-    <footer class="footer bg-footer">
+    <footer class="footer txt-center bg-footer">
         <img src="assets/img/logo_footer.png" alt="Logo Tía Tomate">
     </footer>
 </body>
