actualización de clases

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <section class="call-to-action bg-jelly-bean txt-white espacio">
             <h2 class="txt-xl">¿Tomates para tu negocio?</h2>
-            <a class="btn upper txt-lg txt-dark txt-bold">Click aquí</a>
+            <a href="#" class="btn upper txt-lg txt-dark txt-bold">Click aquí</a>
         </section>
     </main>
 
