últimos arreglos de estilos, elminación de variables no usadas

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <nav class="header_navbar">
-            <img src="assets/img/logo_header2.png" alt="Logo Tía Tomate">
+            <img src="assets/img/logo_header.png" alt="Logo Tía Tomate">
         </nav>
         <section class="header_titulo txt-white txt-center bg-jelly-bean">
             <h1><span class="display txt-xl txt-light">De nuestro cariño </span><span class="display txt-xl txt-bold upper">a tu mesa</span></h1>
